Opened 12 years ago

Closed 12 years ago

#9119 closed bug (fixed)

[Appearance] color of selected menu item text is not applied everywhere

Reported by: Giova84 Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: [Appearance] color of selected menu item text is not applied everywhere Cc:
Blocked By: Blocking:
Platform: x86

Description

In "Appearence" i have selected the color of menu item text (white); is applied in Tracker, in apps menus and inside the Deskbar, but names of the running apps in the Deskbar remain black. Screenshots attached.

Attachments (2)

Color_applied.png (4.2 KB ) - added by Giova84 12 years ago.
Color_not_applied.png (13.8 KB ) - added by Giova84 12 years ago.

Download all attachments as: .zip

Change History (5)

by Giova84, 12 years ago

Attachment: Color_applied.png added

by Giova84, 12 years ago

Attachment: Color_not_applied.png added

comment:1 by anevilyak, 12 years ago

Component: Preferences/AppearanceApplications/Deskbar
Owner: changed from darkwyrm to axeld

comment:2 by Giova84, 12 years ago

This issue is still present on the latest nightly builds.

comment:3 by jscipione, 12 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev45274

Note: See TracTickets for help on using tickets.