Update Deskbar to use menu text and selected menu text color prefs.

... in a couple of places where colors where being hardcoded.

Fixes #9119